# src/docs/swagger.json
@@ -447,7 +447,7 @@
                 }
             }
         },
-        "/brands": {
+        "/brand": {
             "get": {
                 "description": "Retrieve all brands with their associated details",
                 "consumes": [
@@ -480,7 +480,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/brands": {
             "post": {
                 "security": [
                     {
